[project]
name = "atom-tools"
version = "0.1.0"
description = "Collection of tools for use with appthreat/atom."
authors = [
  { name = "Team AppThreat", email = "hello@appthreat.com" },
]
dependencies = ["cleo>=1.0.0", "jmespath>=1.0.0"]
maintainers = [
  { name = "Caroline Russell", email = "caroline@appthreat.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/appthreat/atom-tools"
"Bug Tracker" = "https://github.com/appthreat/atom-tools/issues"

[project.scripts]
atom-tools = "atom_tools.cli.application:main"

[project.entry-points."console_scripts"]
atom-tools = "atom_tools.cli.application:main"

[project.optional-dependencies]
dev = [
"black",
"coverage",
"flake8",
"isort",
"pre-commit",
"pylint",
"pytest",
"tox",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "atom_tools",
  "atom_tools.cli",
  "atom_tools.cli.commands",
  "atom_tools.lib"
]
include-package-data = true

[tool.flake8]
max-line-length = 79
max-complexity = 18
exclude = ["atom_tools/cli/"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.pylint.design]
max-args = 6

[tool.pylint.format]
max-line-length = 79

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint.messages_control]
disable = "W1203,R0903,E0401"


