[project]
name = "atom-tools"
version = "0.3.0"
description = "Collection of tools for use with AppThreat/atom."
authors = [
  { name = "Caroline Russell", email = "caroline@appthreat.dev" },
]
dependencies = ["cleo>=1.0.0", "jmespath>=1.0.0"]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Security",
  "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/appthreat/atom-tools"
"Bug Tracker" = "https://github.com/appthreat/atom-tools/issues"

[project.scripts]
atom-tools = "atom_tools.cli.application:main"

[project.entry-points."console_scripts"]
atom-tools = "atom_tools.cli.application:main"

[project.optional-dependencies]
dev = [
"coverage",
"flake8",
"isort",
"mypy",
"pre-commit",
"pylint",
"pytest",
"tox",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "atom_tools",
  "atom_tools.cli",
  "atom_tools.cli.commands",
  "atom_tools.lib"
]
include-package-data = true

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.pylint.design]
max-args = 6

[tool.pylint.format]
max-line-length = 99

[tool.pylint.logging]
logging-format-style = "new"

[tool.pylint.messages_control]
disable = "W1203,R0903,E0401"


